Practice tdd test